--- a/css/app.css
+++ b/css/app.css
@@ -3437,7 +3437,8 @@ a.subdued {
 .bar-header {
   top: 0;
   border-top-width: 0;
-  border-bottom-width: 1px; }
+  border-bottom-width: 1px;
+  color: #c40c0c;}
   .bar-header.has-tabs-top {
     border-bottom-width: 0px;
     background-image: none; }
